[8:22PM 7/27/2012]
	- renamed 'cg' variable to 'isGUI'
	- console and gui clients now both share the same 'connecting to server' message
[9:12PM 7/26/2012]
	- GUI client will no longer give the console-mode "/logout and /quit" message
	- GUI client can no longer be resized (for the time being, at least)
[4:59 PM 7/25/2012]
	- client will no longer send blank messages

SERVER
[11:43AM 5/2/2013]
	- removed client-sided username checks and made them server-side instead
		-> previous clients will still be able to connect if they still have the checks
[11:32AM 5/2/2013]
	- added version checking
[9:26PM 5/1/2013]
	- renamed ServerPermissionsHandler.java -> PermissionsHandler.java
	- renamed ServerCommandHandler.java -> CommandHandler.java
	- added header comments to all files
[10:26AM 4/30/2013]
	- fixed memory leaks with a few unclosed objects
	- refactored some variable names
[10:16PM 4/29/2013]
	- refactored into org.pavlinic.chat.server for server-specific features
[8:58PM 8/4/2012]: v0.4-alpha
	- began implementing authentication system
		* the client has not yet been updated to support this update
		- accounts can be registered with /account register <password>
		- passwords are hashed and stored in data/logins-db/USERNAME.dat
		- users are only required to enter a password if the chosen name is already registered
			- registered accounts cannot be logged into unless given the correct password
		- passwords are hashed and then checked against the stored password hash
			- upon successful login: the user is connected as normal
			- upon unsuccessful login: the user is disconnected from the server and informed to try again
		- an account file is created for 'console' to prevent hacked clients from connecting under that name
	- feedback messages can now be sent to the client who issued a command via sendMessage()
	- reloading permissions now clears the arrays first 
[2:19PM 8/4/2012]: v0.3-alpha
	- changed the way user permissions are handled for commands